# SignalControllerPrototype

./: CMakeLists.txt  abstract_signal_content.cpp  abstract_signal_content.h  abstract_signal_controller.cpp  abstract_signal_controller.h  channels.h  i_signal_receiver.cpp  i_signal_receiver.h  main.cpp  multi_receiver.cpp  multi_receiver.h  receiver.cpp  receiver.h  singleton_signal_controller.cpp  singleton_signal_controller.h
